tests/should_fail/syntax_unclosed_string.nv
module syntax_unclosed_string
// SHOULD FAIL: unterminated string literal
let x = "hello
